# SortingVisualiser

./: .gitmodules  CMakeLists.txt  README.md
.github/workflows/: cmake-multi-platform.yml
src/App/: App.cpp
